Criação do menu hamburguer

--- a/Perfil.html
+++ b/Perfil.html
@@ -11,6 +11,12 @@
 
 <body>
     <div class="container">
+        <div class="hamburguer">
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+            <span>Fechar</span>
+        </div>
 
         <header>
             <div class="img-wrapper">
@@ -19,8 +25,20 @@
             <div class="perfil">
                 <img src="img/perfil/perfil.png" alt="foto de perfil">
                 <h1>Nome</h1>
+                <h2>Cargo</h2>
             </div>
         </header>
+        <aside class="sidebar">
+
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Feed</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Meu Perfil</a></li>
+                </ul>
+            </nav>
+        </aside>
+
         <div class="descricao">
 
             <textarea disabled
@@ -33,5 +51,6 @@
 
     </div>
 </body>
+<script src="js/script.js"></script>
 
 </html>
