--- a/EditarPerfil.html
+++ b/EditarPerfil.html
@@ -2,10 +2,13 @@
 
 <head>
     <meta charset="utf-8">
-
-    <title>GetJobs</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="css/EditarPerfil.css">
     <link rel="stylesheet" href="css/Bootstrap.css">
+    <title>GetJobs</title>
 
 </head>
 
