--- a/Login.html
+++ b/Login.html
@@ -49,7 +49,7 @@
                 <!--Fim do link redefinir senha-->
                 
                   <!-- Botão de Logar --> 
-                <a type="submit" class="btn btn-primary btn-block mb-4" href="login.php">Logar</a>
+                <a type="submit" class="btn btn-primary btn-block mb-4" href="Home.php?id=<? $usuario['id_usuario']?>">Logar</a>
                     <!--Fim botão de logar-->  
   
                     <!-- Botão de Cadastro -->
